# mess

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  appveyor.yml  broker.h  callback.h  mess.cpp  message.h  message.hpp
cmake/: Submodules.cmake
example/: broker.h  controlmessages.h  main.cpp  printer.h  sensor.h  sensormessages.h  stdcin.h  stdcinmessages.h
example/messandwok/: broker.h  camera.h  cameramessages.h  cameratopics.h  checker.h  filter.h  image.h  main.cpp  monitor.h  processor.h  processortopics.h  systemmessages.h  systemtopics.h  workers.h
example/simple/: broker.h  main.cpp  printer.cpp  printer.h  printertopics.h  sensor.cpp  sensor.h  sensorsubs.h  sensortopics.h  stdcin.cpp  stdcin.h  stdcinsubs.h  stdcintopics.h
examples/: hellofile.cpp  helloworld.cpp  readme.cpp
examples/inclusivescan/apps/withmess/: flow.h  main.cpp
examples/inclusivescan/apps/womess/: main.cpp
examples/inclusivescan/modules/: checker.h  scanner.h  source.cpp  source.h  stats.cpp  stats.h
examples/minimal/: broker.h  console.cpp  console.h  interpreter.cpp  interpreter.h  interpretersubs.h  interpretertopics.h  main.cpp  readme.cpp
examples/split/: broker.h  helloworld.cpp  log.h  logger.cpp  logger.h  logger.hpp  logsub.h
examples/unknown/: helloworld.cpp
include/: broker.h  brokertemplate.hpp  indicestrick.h  lockonce.hpp  messagetraits.h  messmacros.h  messtraits.h  pushlist.h  resource.h  spinmutex.hpp  state.hpp  staticbroker.hpp  subscribemacros.h  topictraits.h  workerpool.h  workpromise.h
include/dag/: graph.hpp  leaf_nodes.hpp  leafs.hpp  ordered_predecessors.hpp  predecessors.hpp  root_nodes.hpp  roots.hpp  subgraph.hpp  successors.hpp  tag_index.hpp  tags.hpp  to_index_graph.hpp  to_indexes.hpp  visit.hpp
include/datapath/: graph.hpp
include/mess/: brokertemplate.h  component.h  detect.h  dispatch.h  flow.h  frame.h  frame.hpp  frameandthunk  frameandthunk.cpp  kit.h  kit.hpp  kit_customizer.hpp  kits.hpp  launch.h  leftovers.cpp  mess  mess.cpp  mess.h  mess.hpp  messtraits.h  ops.h  provide.h  pull.h  push.h  pushpull.h  query.h  stages.h  traits.h
include/mess/details/: helpers.hpp
include/mess/executors/: inline.hpp  std_thread.hpp
include/mess/latches/: atomic_countdown.hpp  last_predeccors.hpp  last_predecessor.hpp  ready.hpp
include/mess/meta/: concatenate.hpp  contains.hpp  find.hpp  graph.hpp  index.hpp  invoke_result.hpp  is_last.hpp  leaf_nodes.hpp  list.hpp  ordered_predecessors.hpp  root_nodes.hpp  sequences.hpp
include/mess/runtime/: inline.h
include/mess/schedulers/: inline.hpp  std_thread.hpp
include/sequence/: concatenate.hpp  contains.hpp  find.hpp  sequence.hpp
include/set/: concatenate.hpp  contains.hpp  disjunction.hpp  filter.hpp  for_each.hpp  index_of.hpp  indexes.hpp  map_reduce.hpp  types.hpp
include/tuple_ops/: concatenate.hpp  is_tuple.hpp
src/: main.cpp  mess.cpp
src/executors/: std_thread.cpp
src/mess/: coro.cpp  main.cpp
src/schedulers/: std_thread.cpp
tests/: CMakeLists.txt  graph_shapes.cpp  scrap.cpp  test_basic_scenario.cpp  test_broker.cpp  test_dependencies.cpp  test_helloworld.cpp  test_launch.cpp  test_mess.cpp  test_pull.cpp  test_push.cpp  test_readme.cpp  test_resource.cpp  test_sources.cpp  test_state.cpp  test_staticbroker.cpp  test_topologicalsort.cpp  test_when.cpp  test_workerpool.cpp  tests.cpp
tests/dag/: graph.cpp  leafs.cpp  ordered_predecessors.cpp  predecessors.cpp  roots.cpp  successors.cpp  tag_index.cpp  tags.cpp  to_index_graph.cpp  to_indexes.cpp
tests/datapath/: graph.cpp  invoke_result.cpp
tests/helloworld/withmess/: helloworld.cpp
tests/helloworld/womess/: helloworld.cpp
tests/meta/: test_contains.cpp  test_find.cpp  test_root_nodes.cpp
tests/sequence/: test_sequence.cpp
tests/set/: concatenate.cpp  contains.cpp  disjunction.cpp  index_of.cpp  indexes.cpp  types.cpp
tests/tuple_ops/: test_concatenate.cpp
tests/utils/: func.hpp  operationcounter.cpp  operationcounter.h
